--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <body>
     <header>
         <nav>
-            <a href="">webstudio</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
-                <li>Studio</li>
-                <li>Portfolio</li>
-                <li>Contacts</li>
+                <li><a href="./index.html">Studio</a></li>
+                <li><a href="./index.html">Portfolio</a></li>
+                <li><a href="./index.html">Contacts</a></li>
             </ul>
         </nav>
         <address>
             <ul>
-                <li>info@devstudio.com</li>
-                <li>+11 (000) 111-11-11</li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a> </li>
             </ul>
         </address>
     </header>
@@ -27,7 +27,7 @@
             for Your Business</h1>
          <button type="button">Order Service</button>
          </section>
-    </main>
+   
     <section>
         <ul>
         <li>
@@ -59,11 +59,13 @@
         
     </ul>
  </section>
+</main>
   <footer>
     <section>
-    <a href="">webstudio</a>
+    <a href="./index.html">WebStudio</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </section>
+
   </footer>
 </body>
 </html>
