--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
          </section>
    
     <section>
+        <h2>Heading 2</h2>
         <ul>
         <li>
             <h3>Strategy</h3>
@@ -52,20 +53,19 @@
 <section>
     <h2>Our Team</h2>
     <ul>
-        <li><img src="img/images/img-3.jpg" alt="Mark Guerrero" width="206" height="160"><h3>Mark Guerrero</h3><p>Product Designer</p></li>
-        <li><img src="img/images/img-2.jpg" alt="Tom Ford" width="206" height="160"> <h3>Tom Ford</h3><p>Frontend Developer</p></li>
-        <li><img src="img/images/img-1.jpg" alt="Camila Garcia" width="206" height="160"><h3>Camila Garcia</h3><p>Marketing</p></li>
-        <li><img src="img/images/img.jpg" alt="Daniel Wilson" width="206" height="160"><h3>Daniel Wilson</h3><p>UI Designer</p></li>
+        <li><img src="img/images/img-3.jpg" alt="Mark Guerrero" width="264" height="160"><h3>Mark Guerrero</h3><p>Product Designer</p></li>
+        <li><img src="img/images/img-2.jpg" alt="Tom Ford" width="264" height="160"> <h3>Tom Ford</h3><p>Frontend Developer</p></li>
+        <li><img src="img/images/img-1.jpg" alt="Camila Garcia" width="264" height="160"><h3>Camila Garcia</h3><p>Marketing</p></li>
+        <li><img src="img/images/img.jpg" alt="Daniel Wilson" width="264" height="160"><h3>Daniel Wilson</h3><p>UI Designer</p></li>
         
     </ul>
  </section>
 </main>
   <footer>
-    <section>
+
     <a href="./index.html">WebStudio</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </section>
-
+    
   </footer>
 </body>
 </html>
