--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
 <body>
     <header>
@@ -29,7 +29,7 @@
          </section>
    
     <section>
-        <h2>Heading 2</h2>
+        <h2>Advantages</h2>
         <ul>
         <li>
             <h3>Strategy</h3>
@@ -53,10 +53,10 @@
 <section>
     <h2>Our Team</h2>
     <ul>
-        <li><img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" height="160"><h3>Mark Guerrero</h3><p>Product Designer</p></li>
-        <li><img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="160"> <h3>Tom Ford</h3><p>Frontend Developer</p></li>
-        <li><img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="160"><h3>Camila Garcia</h3><p>Marketing</p></li>
-        <li><img src="./images/img.jpg" alt="Daniel Wilson" width="264" height="160"><h3>Daniel Wilson</h3><p>UI Designer</p></li>
+        <li><img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" height="260"><h3>Mark Guerrero</h3><p>Product Designer</p></li>
+        <li><img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260"> <h3>Tom Ford</h3><p>Frontend Developer</p></li>
+        <li><img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260"><h3>Camila Garcia</h3><p>Marketing</p></li>
+        <li><img src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260"><h3>Daniel Wilson</h3><p>UI Designer</p></li>
         
     </ul>
  </section>
