--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="slylesheet" href="./css/styles.css"
+
 </head>
+
 <body>
     <header>
         <nav>
@@ -60,6 +67,33 @@
         
     </ul>
  </section>
+
+<section>
+    <h2>Our Portfolio</h2>
+    <ul>
+        <li><img src="./images/img-9.jpg" alt="Banking App" width="264" height="260">
+            <h3>Banking App</h3>
+            <p>App</p>
+        </li>
+        <li><img src="./images/img-8.jpg" alt="Cashless Payment" width="264" height="260">
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+        </li>
+        <li><img src="./images/img-7.jpg" alt="Meditation App" width="264" height="260">
+            <h3>Meditation App</h3>
+            <p>App</p>
+        </li>
+         <img src="./images/img-6.jpg" alt="Taxi Service" width="264" height="260">
+            <h3>DTaxi Serviceaniel Wilson</h3>
+            <p>Marketing</p>
+        <li><img src="./images/img-5.jpg" alt="Screen Illustrations" width="264" height="260">
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+        <li><img src="./images/img-10.jpg" alt="Online Courses" width="264" height="260">
+             <h3>Online Courses</h3>
+            <p>Marketing</p>
+           </ul>
+</section>
 </main>
   <footer>
 
