--- a/index.html
+++ b/index.html
@@ -8,97 +8,99 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
-    <link rel="slylesheet" href="./css/styles.css"
-
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="./index.html">Studio</a></li>
-                <li><a href="./index.html">Portfolio</a></li>
-                <li><a href="./index.html">Contacts</a></li>
+    <header class="page-header">
+        <nav class="header-nav">
+            <a class="logo header-logo" href="./index.html">Web <span class="logo-part">Studio</span></a>
+            <ul class="header-list">
+                <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
+                <li class="nav-item"><a class="nav-link" href="./index.html">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-link" href="./index.html">Contacts</a></li>
             </ul>
         </nav>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a> </li>
+        <address class="header-contacts">
+            <ul class="contacts-list">
+                <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="contacts-item" ><a class="contacts-link" href="tel:+110001111111"> +11 (000) 111-11-11</a> </li>
             </ul>
         </address>
-    </header>
+    </header >
     <main>
-        <section><h1>Effective Solutions
+        <section><h1 class="hero-title" >Effective Solutions
             for Your Business</h1>
-         <button type="button">Order Service</button>
+         <button type="button" class="hero-btn">Order Service</button>
          </section>
    
     <section>
-        <h2>Advantages</h2>
-        <ul>
-        <li>
-            <h3>Strategy</h3>
-            <p>Our goal is to identify the business
+        <h2 class="benefits-title">Advantages</h2>
+        <ul class="benefits-list">
+        <li class="benefit-item">
+            <h3 class="benefits-subtitle">Strategy</h3>
+            <p class="benefits-text">Our goal is to identify the business
             problem to walk away with the perfect and creative solution.</p>
         </li>
-        <li>
-            <h3>Punctuality</h3>
-            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+        <li class="benefit-item">
+        <li >
+            <h3 class="benefits-subtitle">Punctuality</h3>
+            <p class="benefits-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
         </li>
-        <li>
-            <h3>Diligence</h3>
-            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+        <li class="benefit-item">
+        <li >
+            <h3 class="benefits-subtitle">Diligence</h3>
+            <p class="benefits-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
-        <li>
-            <h3>Technologies</h3>
-            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        <li class="benefit-item">
+        <li >
+            <h3 class="benefits-subtitle">Technologies</h3>
+            <p class="benefits-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </li>
        </ul>
 </section>
 <section>
-    <h2>Our Team</h2>
-    <ul>
-        <li><img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" height="260"><h3>Mark Guerrero</h3><p>Product Designer</p></li>
-        <li><img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260"> <h3>Tom Ford</h3><p>Frontend Developer</p></li>
-        <li><img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260"><h3>Camila Garcia</h3><p>Marketing</p></li>
-        <li><img src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260"><h3>Daniel Wilson</h3><p>UI Designer</p></li>
+    <h2 class="section-title">Our Team</h2>
+    <ul class="team-list">
+        <li class="team-item"><img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" height="260"><h3 class="team-subtitle">Mark Guerrero</h3><p class="team-desc">Product Designer</p></li>
+        <li class="team-item"><img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260"> <h3 class="team-subtitle">Tom Ford</h3><p class="team-desc">Frontend Developer</p></li>
+        <li class="team-item"><img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260"><h3 class="team-subtitle">Camila Garcia</h3><p class="team-desc">Marketing</p></li>
+        <li class="team-item"><img src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260"><h3 class="team-subtitle">Daniel Wilson</h3><p class="team-desc">UI Designer</p></li>
         
     </ul>
  </section>
 
 <section>
-    <h2>Our Portfolio</h2>
-    <ul>
-        <li><img src="./images/img-9.jpg" alt="Banking App" width="264" height="260">
-            <h3>Banking App</h3>
-            <p>App</p>
+    <h2 class="section-title">Our Portfolio</h2>
+    <li class="portfolio-list">
+        <li class="portfolio-item"><img src="./images/img-9.jpg" alt="Banking App" width="264" height="260">
+            <h3 class="portfolio-subtitle">Banking App</h3>
+            <p class="portfolio-text">App</p>
         </li>
-        <li><img src="./images/img-8.jpg" alt="Cashless Payment" width="264" height="260">
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+        <li class="portfolio-item"><img src="./images/img-8.jpg" alt="Cashless Payment" width="264" height="260">
+            <h3 class="portfolio-subtitle">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
         </li>
-        <li><img src="./images/img-7.jpg" alt="Meditation App" width="264" height="260">
-            <h3>Meditation App</h3>
-            <p>App</p>
+        <li class="portfolio-item"><img src="./images/img-7.jpg" alt="Meditation App" width="264" height="260">
+            <h3 class="portfolio-subtitle">Meditation App</h3>
+            <p class="portfolio-text">App</p>
         </li>
-         <img src="./images/img-6.jpg" alt="Taxi Service" width="264" height="260">
-            <h3>DTaxi Serviceaniel Wilson</h3>
-            <p>Marketing</p>
-        <li><img src="./images/img-5.jpg" alt="Screen Illustrations" width="264" height="260">
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
-        <li><img src="./images/img-10.jpg" alt="Online Courses" width="264" height="260">
-             <h3>Online Courses</h3>
-            <p>Marketing</p>
+         <li class="portfolio-item"><img src="./images/img-6.jpg" alt="Taxi Service" width="264" height="260"> 
+            <h3 class="portfolio-subtitle">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p></li>
+        <li class="portfolio-item"><img src="./images/img-5.jpg" alt="Screen Illustrations" width="264" height="260">
+            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
+        <li class="portfolio-item"><img src="./images/img-10.jpg" alt="Online Courses" width="264" height="260">
+             <h3 class="portfolio-subtitle">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
            </ul>
 </section>
 </main>
-  <footer>
+  <footer class="page-footer">
 
-    <a href="./index.html">WebStudio</a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+    <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
   </footer>
 </body>
