--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </address>
     </header >
     <main>
-        <section><h1 class="hero-title" >Effective Solutions
+        <section class="hero"><h1 class="hero-title" >Effective Solutions
             for Your Business</h1>
          <button type="button" class="hero-btn">Order Service</button>
          </section>
