--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+            integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -17,8 +20,8 @@
             <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
             <ul class="header-list">
                 <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
-                <li class="nav-item"><a class="nav-link" href="./index.html">Portfolio</a></li>
-                <li class="nav-item"><a class="nav-link" href="./index.html">Contacts</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="header-contacts">
@@ -28,8 +31,11 @@
             </ul>
         </address>
     </header >
+
     <main>
-        <section class="hero"><h1 class="hero-title" >Effective Solutions
+
+        <section class="hero">
+            <h1 class="hero-title" >Effective Solutions
             for Your Business</h1>
          <button type="button" class="hero-btn">Order Service</button>
          </section>
@@ -43,22 +49,20 @@
             problem to walk away with the perfect and creative solution.</p>
         </li>
         <li class="benefit-item">
-        <li >
             <h3 class="benefits-subtitle">Punctuality</h3>
             <p class="benefits-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
         </li>
         <li class="benefit-item">
-        <li >
             <h3 class="benefits-subtitle">Diligence</h3>
             <p class="benefits-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
         <li class="benefit-item">
-        <li >
             <h3 class="benefits-subtitle">Technologies</h3>
             <p class="benefits-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </li>
        </ul>
 </section>
+
 <section>
     <h2 class="section-title">Our Team</h2>
     <ul class="team-list">
@@ -72,31 +76,42 @@
 
 <section>
     <h2 class="section-title">Our Portfolio</h2>
-    <li class="portfolio-list">
-        <li class="portfolio-item"><img src="./images/img-9.jpg" alt="Banking App" width="264" height="260">
-            <h3 class="portfolio-subtitle">Banking App</h3>
-            <p class="portfolio-text">App</p>
-        </li>
-        <li class="portfolio-item"><img src="./images/img-8.jpg" alt="Cashless Payment" width="264" height="260">
-            <h3 class="portfolio-subtitle">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-        </li>
-        <li class="portfolio-item"><img src="./images/img-7.jpg" alt="Meditation App" width="264" height="260">
-            <h3 class="portfolio-subtitle">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-        </li>
-         <li class="portfolio-item"><img src="./images/img-6.jpg" alt="Taxi Service" width="264" height="260"> 
-            <h3 class="portfolio-subtitle">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p></li>
-        <li class="portfolio-item"><img src="./images/img-5.jpg" alt="Screen Illustrations" width="264" height="260">
-            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-        <li class="portfolio-item"><img src="./images/img-10.jpg" alt="Online Courses" width="264" height="260">
-             <h3 class="portfolio-subtitle">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-           </ul>
+    <ul>
+        <li class="portfolio-list">
+    <li class="portfolio-item">
+        <img src="./images/img-9.jpg" alt="Banking App" width="360">
+        <h3 class="portfolio-subtitle">Banking App</h3>
+        <p class="portfolio-text">App</p>
+    </li>
+    <li class="portfolio-item">
+        <img src="./images/img-8.jpg" alt="Cashless Payment" width="360">
+        <h3 class="portfolio-subtitle">Cashless Payment</h3>
+        <p class="portfolio-text">Marketing</p>
+    </li>
+    <li class="portfolio-item">
+        <img src="./images/img-7.jpg" alt="Meditation App" width="360">
+        <h3 class="portfolio-subtitle">Meditation App</h3>
+        <p class="portfolio-text">App</p>
+    </li>
+    <li class="portfolio-item">
+        <img src="./images/img-6.jpg" alt="Taxi Service" width="360">
+        <h3 class="portfolio-subtitle">Taxi Service</h3>
+        <p class="portfolio-text">Marketing</p>
+    </li>
+    <li class="portfolio-item"><img src="./images/img-5.jpg" alt="Screen Illustrations" width="360">
+        <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+        <p class="portfolio-text">Design</p>
+    </li>
+    <li class="portfolio-item">
+        <img src="./images/img-10.jpg" alt="Online Courses" width="360">
+        <h3 class="portfolio-subtitle">Online Courses</h3>
+        <p class="portfolio-text">Marketing</p>
+    </li>
+</ul>
+    
 </section>
 </main>
+
   <footer class="page-footer">
 
     <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
