--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
          <button type="button" class="hero-btn">Order Service</button>
          </section>
    
-    <section>
+    <section class="benefits">
         <h2 class="benefits-title">Advantages</h2>
         <ul class="benefits-list">
         <li class="benefit-item">
@@ -63,7 +63,7 @@
        </ul>
 </section>
 
-<section>
+<section class="team">
     <h2 class="section-title">Our Team</h2>
     <ul class="team-list">
         <li class="team-item"><img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" height="260"><h3 class="team-subtitle">Mark Guerrero</h3><p class="team-desc">Product Designer</p></li>
@@ -74,10 +74,10 @@
     </ul>
  </section>
 
-<section>
+<section class="portfolio">
     <h2 class="section-title">Our Portfolio</h2>
     <ul>
-        <li class="portfolio-list">
+        
     <li class="portfolio-item">
         <img src="./images/img-9.jpg" alt="Banking App" width="360">
         <h3 class="portfolio-subtitle">Banking App</h3>
