--- a/index.html
+++ b/index.html
@@ -76,19 +76,24 @@
 <section class="team">
     <div class="container"><h2 class="section-title-team">Our Team</h2>
     <ul class="team-list">
-        <li class="team-item"><div class="card"><img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" height="260">
+        <li class="team-item"><img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" height="260">
+            <div class="card">
         <h3 class="team-subtitle">Mark Guerrero</h3>
         <p class="team-desc">Product Designer</p></div>
         </li>
-        <li class="team-item"><div class="card"><img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260">
+        <li class="team-item"><img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260">
+            <div class="card">
         <h3 class="team-subtitle">Tom Ford</h3>
         <p class="team-desc">Frontend Developer</p></div>
         </li>
-        <li class="team-item"><div class="card"><img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260">
+        <li class="team-item">
+            <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260"><div class="card">
         <h3 class="team-subtitle">Tom Ford</h3>
         <p class="team-desc">Frontend Developer</p></div>
         </li>
-        <li class="team-item"><div class="card"><img src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260"><h3 class="team-subtitle">Daniel Wilson</h3>
+        <li class="team-item"><img src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260">
+        <h3 class="team-subtitle">Daniel Wilson</h3>
+            <div class="card">
         <p class="team-desc">UI Designer</p></div>
            
         </li>
