--- a/index.html
+++ b/index.html
@@ -130,9 +130,12 @@
         <p class="team-desc">Frontend Developer</p></div>
         </li>
         <li class="team-item">
-            <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260"><div class="card">
-        <h3 class="team-subtitle">Camila Garcia</h3>
-        <p class="team-desc">Marketing</p></div>
+            <div class="portfolio-cover-wrapper"><img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260">
+            <div class="card">
+                <h3 class="team-subtitle">Camila Garcia</h3>
+                <p class="team-desc">Marketing</p>
+            </div>
+            
         </li>
         <li class="team-item"><img src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260">
             <div class="card">
@@ -156,7 +159,10 @@
         </li>
         <li class="portfolio-item">
             <img src="./images/img-8.jpg" alt="Cashless Payment" width="360">
-            <div class="card-desc"><h3 class="portfolio-subtitle">Cashless Payment</h3>
+            <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+            Cloud Storage App</p>
+            <div class="card-desc">
+                <h3 class="portfolio-subtitle">Cashless Payment</h3>
             <p class="portfolio-text">Marketing</p></div>
         </li>
         <li class="portfolio-item">
@@ -187,7 +193,7 @@
   <footer class="page-footer">
     <div class="container footer-container">
         
-        <div class=".logo-text">
+        <div class=".footer-logo-text">
             <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
             solutions.</p>
