--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="header-nav">
             <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
             <ul class="header-list">
-                <li class="nav-item"><a class="nav-link " href="./index.html">Studio</a></li>
+                <li class="nav-item"><a class="nav-link current" href="./index.html">Studio</a></li>
                 <li class="nav-item"><a class="nav-link " href="">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link " href="">Contacts</a></li>
             </ul>
@@ -153,12 +153,16 @@
     <ul class="portfolio-list">
     
         <li class="portfolio-item">
-            <img src="./images/img-9.jpg" alt="Banking App" width="360">
-            <div class="card-desc"><h3 class="portfolio-subtitle">Banking App</h3>
+            <div><img src="./images/img-9.jpg" alt="Banking App" width="360"></div>
+            <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
+            <div class="card-desc">
+                <h3 class="portfolio-subtitle">Banking App</h3>
             <p class="portfolio-text">App</p></div>
         </li>
         <li class="portfolio-item">
-            <img src="./images/img-8.jpg" alt="Cashless Payment" width="360">
+            <div><img src="./images/img-8.jpg" alt="Cashless Payment" width="360"></div>
             <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
             Cloud Storage App</p>
             <div class="card-desc">
@@ -166,21 +170,34 @@
             <p class="portfolio-text">Marketing</p></div>
         </li>
         <li class="portfolio-item">
-            <img src="./images/img-7.jpg" alt="Meditation App" width="360">
+            <div><img src="./images/img-7.jpg" alt="Meditation App" width="360"></div>
+            <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
             <div class="card-desc"><h3 class="portfolio-subtitle">Meditation App</h3>
             <p class="portfolio-text">App</p></div>
         </li>
         <li class="portfolio-item">
-            <img src="./images/img-6.jpg" alt="Taxi Service" width="360">
+            <div><img src="./images/img-6.jpg" alt="Taxi Service" width="360"></div>
+            <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
             <div class="card-desc"><h3 class="portfolio-subtitle">Taxi Service</h3>
             <p class="portfolio-text">Marketing</p></div>
         </li>
-        <li class="portfolio-item"><img src="./images/img-5.jpg" alt="Screen Illustrations" width="360">
+        <li class="portfolio-item">
+            <div><img src="./images/img-5.jpg" alt="Screen Illustrations" width="360"></div>
+            <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
             <div class="card-desc"><h3 class="portfolio-subtitle">Screen Illustrations</h3>
             <p class="portfolio-text">Design</p></div>
         </li>
         <li class="portfolio-item">
-            <img src="./images/img-10.jpg" alt="Online Courses" width="360">
+            <div><img src="./images/img-10.jpg" alt="Online Courses" width="360"></div>
+            <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
             <div class="card-desc"><h3 class="portfolio-subtitle">Online Courses</h3>
             <p class="portfolio-text">Marketing</p></div>
         </li>
