--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                 <label for="footer-email" class="enter-email"></label>
                 <input type="email" name="footer-email" id="footer-email" class="footer-input" placeholder="Email">
                 <button type="submit" class="footer-btn">Subscribe 
-                    <svg slass="subscribe-icon" width="24" height="24"><use href="./images/icons.svg#icon-Frame-3"></use></svg> </button>
+                    <svg  width="24" height="24"><use href="./images/icons.svg#icon-Frame-3"></use></svg> </button>
             </form>
 
         </div>
@@ -456,6 +456,8 @@
         </button>
 
     <p class="modal-title">Leave your contacts and we will call you back</p>
+    </div>
+
 
     <form class="modal-form">
 
@@ -470,7 +472,8 @@
 
     </div>
 
-     <div class="modal-field"><label for="tel" class="modal-label">Phone</label>
+     <div class="modal-field">
+        <label for="user-tel" class="modal-label">Phone</label>
 
         <div class="input-wrapper">
             <input type="tel" name="user-tel" id="user-tel" class="modal-input">
@@ -481,7 +484,8 @@
 
     </div>
 
-     <div class="modal-field"><label for="email" class="modal-label">Email</label>
+     <div class="modal-field">
+        <label for="user-email" class="modal-label">Email</label>
 
         <div class="input-wrapper">
             <input type="email" name="user-email" id="user-email" class="modal-input">
@@ -521,14 +525,14 @@
         </div>
         
 
-    </div>
+    <div>
 
      <button type="submit">Send</button>
-</form>
+
 
     </div>
+</form>
 </div>
-
 
 </body>
 </html>
